--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   </head>
 
   <body>
-    <!-- Navigation Bar -->
+    <!-- ======= NAVIGATION BAR ======= -->
     <nav class="navbar">
       <div class="container">
+
+        <!-- Logo + Profile Image -->
         <div class="logo">
           <a href="#home">
             <img
@@ -23,13 +25,16 @@
               alt="Profile image/logo"
               style="height: 50px; vertical-align: middle"
             />
-            <!-- logo image here -->
             Muhammad.
           </a>
         </div>
+
+        <!-- Mobile Toggle Icon (hamburger with glowing animation on icon) -->
         <div class="nav-toggle">
           <span class="nav-toggle-icon"></span>
         </div>
+
+        <!-- Navigation Links -->
         <ul class="nav-menu">
           <li><a href="#about" aria-label="About">About</a></li>
           <li><a href="#certifications" aria-label="Certifications">Certifications</a></li>
@@ -37,8 +42,10 @@
           <li><a href="#skills" aria-label="Skills">Skills</a></li>
           <li><a href="#contact" aria-label="Contact">Contact</a></li>
         </ul>
+
       </div>
     </nav>
+
 
     <!-- Header Section -->
     <header id="home">
