Update About Me message <p>

--- a/index.html
+++ b/index.html
@@ -59,15 +59,11 @@
       <!-- About Section -->
       <section id="about">
         <h2>About Me</h2>
-        <p>
-          Certified Salesforce Administrator and full-stack developer in progress, building
-          user-centered, scalable tools that automate and solve real-world problems. I specialize in
-          clean UI, functional logic, and scalable architecture, and bring a systems-first mindset
-          from my clinical and data-heavy background.
+        <p> 
+          Creative, detail-oriented, Full Stack Developer with a clinical background, trained through ASU’s AZNext + Cognizant program. Focused on usability, clean systems, and delivering practical, working software with a deep interest in AI. Proven track record of creating and implementing successful front and back end web applications. Looking to bring my skills to a tech company with global reach.
         </p>
         <p>
           Currently developing in HTML, CSS, and JavaScript, and expanding into Node.js, React, and
-          MongoDB through structured bootcamps like AZNext Web Developer (July 2025) and 100Devs.
           I'm committed to continuous learning, hands-on development, and delivering practical
           software that works.
         </p>
