Update index.html header section text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header id="home">
       <div class="header-content">
         <h1>Hi, I'm Muhammad Zahid</h1>
-        <p>Learning full-stack dev. I write, break things, fix them, and repeat!</p>
+        <p>Full-stack developer. I write, break things, fix them, and repeat!</p>
       </div>
     </header>
 
