Update Portfolio (About section)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section id="about">
         <h2>About Me</h2>
         <p> 
-          Creative, detail-oriented, Full Stack Developer with a clinical background, trained through ASU’s AZNext + Cognizant program. Focused on usability, clean systems, and delivering practical, working software with a deep interest in AI. Proven track record of creating and implementing successful front and back end web applications. Looking to bring my skills to a tech company with global reach.
+          Creative, detail-oriented Full Stack Developer with a clinical background, trained through ASU’s AZNext Program (Cognizant partnership) and 100Devs. Focused on usability, clean systems, and delivering practical, working software with a deep interest in AI. Focused on usability, clean systems, and delivering practical, working software with a deep interest in AI. Proven track record of creating and implementing successful front and back end web applications. Looking to bring my skills to a tech company with global reach.
         </p>
         <p>
           Currently developing in HTML, CSS, and JavaScript, and expanding into Node.js, React, and
