Update Portfolio About Me

--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
       <section id="about">
         <h2>About Me</h2>
         <p> 
-          Creative, detail-oriented Full Stack Developer with a clinical background, trained through ASU’s AZNext Program (Cognizant partnership) and 100Devs. Focused on usability, clean systems, and delivering practical, working software with a deep interest in AI. Focused on usability, clean systems, and delivering practical, working software with a deep interest in AI. Proven track record of creating and implementing successful front and back end web applications. Looking to bring my skills to a tech company with global reach.
+          Creative, detail-oriented Full Stack Developer with a clinical background, trained through ASU’s AZNext Program (Cognizant partnership) and 100Devs Agency. Focused on building usable, maintainable applications with clean systems and a growing interest in AI. Hands-on experience creating and delivering full-stack web applications, from responsive front ends to robust back ends. Excited to contribute my skills and grow with a forward-thinking team.
         </p>
         <p>
-          Currently developing in HTML, CSS, and JavaScript, and expanding into Node.js, React, and
-          I'm committed to continuous learning, hands-on development, and delivering practical
-          software that works.
+          Currently working with HTML, CSS, and JavaScript, while expanding into Node.js, React, and modern databases. Committed to continuous learning, hands-on development, and writing practical software that works.
         </p>
       </section>
 
