Update Back to Top button # instead of home

--- a/index.html
+++ b/index.html
@@ -224,12 +224,13 @@
 
     <script src="script.js"></script>
 
-    <!-- BACK TO TOP BUTTON HERE -->
-    <div class="btt-container">
-      <a href="#home" class="btt">Back to Top</a>
-    </div>
+    <!-- === BACK TO TOP BUTTON HERE === -->
+    <a href="#" class="btt" aria-label="Back to top">
+      <i class="bi bi-arrow-up-short"></i>
+    </a>
   </body>
 </html>
+
 
 
 <!--   
