Update back to top button - FontAwesome
Swap <i class="bi bi-arrow-up-short"></i> for the FontAwesome <i class="fa-solid fa-arrow-up"></i>

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
     <!-- === BACK TO TOP BUTTON HERE === -->
     <a href="#" class="btt" aria-label="Back to top">
-      <i class="bi bi-arrow-up-short"></i>
+      <i class="fa-solid fa-arrow-up"></i>
     </a>
   </body>
 </html>
