Update currently learning -> further learning

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             </ul>
           </li>
           <li>
-            <strong>AZNext Web Developer (ASU)</strong> – Enrolled, Cohort July 2025
+            <strong>AZNext Web Developer (ASU)</strong> – Cohort July 2025
             <ul>
               <li>Focused on full-stack JavaScript development</li>
             </ul>
           </li>
           <li>
-            <strong>Currently Learning</strong>
+            <strong>Further Learning</strong>
             <ul class="currently-learning">
               <li title="React">React ⚛️</li>
               <li title="Node.js">Node.js 🌐</li>
