Update project order

--- a/index.html
+++ b/index.html
@@ -101,27 +101,23 @@
       <!-- Projects Section -->
       <section id="projects">
         <h2>Projects</h2>
-        <ul>
+        <ul>       
           <li>
-              <strong>Portfolio Website</strong>: Responsive site showcasing projects and GitHub activity.<br />
-              Built with HTML, CSS, and JavaScript; deployed on GitHub Pages.<br />
-              <a href="https://github.com/mzahiddev404/mzahiddev404.github.io" target="_blank" title="View Portfolio Code">📂 View Code</a>
+              <strong>Knots by Esmera (Fullstack E-Commerce)</strong>: Full-stack jewelry shop where customers can browse products, add items to cart, and view totals with tax + shipping.<br />
+              Built with HTML, CSS, JavaScript, Node.js, Express, and MySQL; fully responsive design for desktop and mobile. Deployed to <a href="https://knotsbyesmera.com" target="_blank" title="Knots by Esmera Website">knotsbyesmera.com</a>.<br />
+              <a href="https://knotsbyesmera.com" target="_blank" title="Live Knots by Esmera">💻 View Live</a>
           </li>
-        
           <li>
-              <strong>Background Color Picker (AZNext Prework)</strong>: Interactive app that updates the page background with button clicks.<br />
+              <strong>Background Color Picker</strong>: Interactive app that updates the page background with button clicks.<br />
               Built with JavaScript DOM methods (<code>querySelector</code>, event listeners) and styled with hover effects.<br />
               <a href="https://mzahiddev404.github.io/background-color-picker/" target="_blank" title="Live Color Picker Demo">💻 View Live</a>
               |
               <a href="https://github.com/mzahiddev404/background-color-picker" target="_blank" title="View Code on GitHub">📂 View Code</a>
           </li>
-        
           <li>
-              <strong>Knots by Esmera (Fullstack E-Commerce)</strong>: Full-stack jewelry shop where customers can browse products, add items to cart, and view totals with tax + shipping.<br />
-              Built with HTML, CSS, JavaScript, Node.js, Express, and MySQL; fully responsive design for desktop and mobile. Deployed to <a href="https://knotsbyesmera.com" target="_blank" title="Knots by Esmera Website">knotsbyesmera.com</a>.<br />
-              <a href="https://knotsbyesmera.com" target="_blank" title="Live Knots by Esmera">💻 View Live</a>
-              |
-              <a href="https://github.com/mzahiddev404/knotsbyesmera" target="_blank" title="View Code on GitHub">📂 View Code</a>
+              <strong>Portfolio Website</strong>: Responsive site showcasing projects and GitHub activity.<br />
+              Built with HTML, CSS, and JavaScript; deployed on GitHub Pages.<br />
+              <a href="https://github.com/mzahiddev404/mzahiddev404.github.io" target="_blank" title="View Portfolio Code">📂 View Code</a>
           </li>
         </ul>
       </section>
