Update index.html add comments + add skill badge + Certification section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My GitHub Profile</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- fontawesome -->
+    <!-- fontawesome icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -14,7 +14,7 @@
 
   <body>
     <!-- ======= NAVIGATION BAR ======= -->
-    <nav class="navbar">
+      <nav class="navbar">
       <div class="container">
 
         <!-- Logo + Profile Image -->
@@ -29,7 +29,7 @@
           </a>
         </div>
 
-        <!-- Mobile Toggle Icon (hamburger with glowing animation on icon) -->
+        <!-- Mobile menu Icon (hamburger with glowing animation on icon) -->
         <div class="nav-toggle">
           <span class="nav-toggle-icon"></span>
         </div>
@@ -60,10 +60,13 @@
       <section id="about">
         <h2>About Me</h2>
         <p> 
-          Creative, detail-oriented Full Stack Developer with a clinical background, trained through ASU’s AZNext Program (Cognizant partnership) and 100Devs Agency. Focused on building usable, maintainable applications with clean systems and a growing interest in AI. Hands-on experience creating and delivering full-stack web applications, from responsive front ends to robust back ends. Excited to contribute my skills and grow with a forward-thinking team.
+          Hey there! I'm Muhammad, a creative developer who loves turning ideas into reality. With a background in healthcare, I bring a unique perspective to building applications that actually solve real problems.
         </p>
         <p>
-          Currently working with HTML, CSS, and JavaScript, while expanding into Node.js, React, and modern databases. Committed to continuous learning, hands-on development, and writing practical software that works.
+          I'm passionate about clean code, user-friendly interfaces, and the endless possibilities of AI. When I'm not coding, you'll find me exploring new technologies or working on projects that make a difference.
+        </p>
+        <p>
+          Currently diving deep into <strong>React</strong>, <strong>Node.js</strong>, and <strong>Python</strong> while building full-stack applications. Always learning, always building, always excited about what's next.
         </p>
       </section>
 
@@ -80,14 +83,31 @@
             </ul>
           </li>
           <li>
-            <strong>AZNext Web Developer (ASU)</strong> – Cohort July 2025
+            <strong>Arizona State University (AZNext Program)</strong>
             <ul>
-              <li>Focused on full-stack JavaScript development</li>
+              <li><strong>Full Stack Web Developer</strong> – 07/2025 - 09/2025
+                <ul>
+                  <li>• Immersive Full Stack Developer Certificate program with Cognizant</li>
+                  <li>• Capstone: Built e-commerce web app (🔗 <a href="https://knotsbyesmera.com/" target="_blank" rel="noopener noreferrer">knotsbyesmera.com</a>)</li>
+                  <li>• Tech stack: HTML | CSS | Java | JavaScript | Node.js | SQL | Spring Boot | Git | VS Code | AWS</li>
+                </ul>
+              </li>
+              <li><strong>AIBuilderX / Vibe Coding – AI & Software Development</strong> – 09/2025 - 12/2025
+                <ul>
+                  <li>• Selective program with Revature</li>
+                  <li>• Focus on Python, AI, and Next.js</li>
+                  <li>• Tech stack: React | Next.js | Machine Learning</li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li>
             <strong>Further Learning</strong>
             <ul class="currently-learning">
+              <li title="Python">Python 🐍</li>
+              <li title="AI">AI 🤖</li>
+              <li title="Next.js">Next.js ⚡</li>
+              <li title="Express.js">Express.js 🚀</li>
               <li title="React">React ⚛️</li>
               <li title="Node.js">Node.js 🌐</li>
               <li title="MongoDB">MongoDB 🍃</li>
@@ -98,30 +118,33 @@
         </ul>
       </section>
 
-      <!-- Projects Section -->
+      <!-- projects -->
       <section id="projects">
         <h2>Projects</h2>
         <ul>       
           <li>
-              <strong>Knots by Esmera (Fullstack E-Commerce)</strong>: Full-stack jewelry shop where customers can browse products, add items to cart, and view totals with tax + shipping.<br />
+              <strong>Knots by Esmera (Fullstack E-Commerce)</strong><br />
+              Full-stack jewelry shop where customers can browse products, add items to cart, and view totals with tax + shipping.<br />
               Built with HTML, CSS, JavaScript, Node.js, Express, and MySQL; fully responsive design for desktop and mobile. Deployed to <a href="https://knotsbyesmera.com" target="_blank" title="Knots by Esmera Website">knotsbyesmera.com</a>.<br />
               <a href="https://knotsbyesmera.com" target="_blank" title="Live Knots by Esmera">💻 View Live</a>
           </li>
           <li>
-              <strong>Background Color Picker</strong>: Interactive app that updates the page background with button clicks.<br />
+              <strong>Background Color Picker</strong><br />
+              Interactive app that updates the page background with button clicks.<br />
               Built with JavaScript DOM methods (<code>querySelector</code>, event listeners) and styled with hover effects.<br />
               <a href="https://mzahiddev404.github.io/background-color-picker/" target="_blank" title="Live Color Picker Demo">💻 View Live</a>
               |
               <a href="https://github.com/mzahiddev404/background-color-picker" target="_blank" title="View Code on GitHub">📂 View Code</a>
           </li>
           <li>
-              <strong>Portfolio Website</strong>: Responsive site showcasing projects and GitHub activity.<br />
-              Built with HTML, CSS, and JavaScript; deployed on GitHub Pages.<br />
+              <strong>Portfolio Website</strong><br />
+              Professional portfolio showcasing full-stack development skills and project experience.<br />
+              Features responsive design, interactive navigation, and modern UI components. Built with HTML, CSS, and JavaScript; deployed on GitHub Pages.<br />
               <a href="https://github.com/mzahiddev404/mzahiddev404.github.io" target="_blank" title="View Portfolio Code">📂 View Code</a>
           </li>
         </ul>
       </section>
-      <!-- Skills Section -->
+      <!-- skills -->
       <section id="skills">
         <h2>Skills</h2>
         <ul class="skill-list">
@@ -157,27 +180,61 @@
           <li>
             <a href="#" class="skill-link">
               <img
-                src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
-                alt="Python Badge"
+                src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
+                alt="Java Badge"
               />
-              <span class="skill-tooltip">General-purpose programming language</span>
+              <span class="skill-tooltip">Object-oriented programming language for enterprise applications</span>
             </a>
           </li>
           <li>
             <a href="#" class="skill-link">
               <img
-                src="https://img.shields.io/badge/Salesforce-00A1E0?style=for-the-badge&logo=Salesforce&logoColor=white"
-                alt="Salesforce Badge"
+                src="https://img.shields.io/badge/Node.js-43853D?style=for-the-badge&logo=node.js&logoColor=white"
+                alt="Node.js Badge"
               />
-              <span class="skill-tooltip"
-                >Cloud-based customer relationship management (CRM) platform</span
-              >
+              <span class="skill-tooltip">JavaScript runtime for server-side development</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="skill-link">
+              <img
+                src="https://img.shields.io/badge/MySQL-00000F?style=for-the-badge&logo=mysql&logoColor=white"
+                alt="MySQL Badge"
+              />
+              <span class="skill-tooltip">Relational database management system</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="skill-link">
+              <img
+                src="https://img.shields.io/badge/Spring_Boot-6DB33F?style=for-the-badge&logo=spring&logoColor=white"
+                alt="Spring Boot Badge"
+              />
+              <span class="skill-tooltip">Java framework for building microservices</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="skill-link">
+              <img
+                src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
+                alt="Git Badge"
+              />
+              <span class="skill-tooltip">Version control system for tracking code changes</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="skill-link">
+              <img
+                src="https://img.shields.io/badge/Amazon_AWS-232F3E?style=for-the-badge&logo=amazon-aws&logoColor=white"
+                alt="AWS Badge"
+              />
+              <span class="skill-tooltip">Cloud computing platform for deployment and services</span>
             </a>
           </li>
         </ul>
       </section>
 
-      <!-- Contact Section -->
+      <!-- contact -->
       <section id="contact">
         <h2>Contact</h2>
         <ul class="contact-list">
@@ -225,7 +282,7 @@
       <p>&copy; 2025 Muhammad Zahid</p>
     </footer>
 
-    <!-- === BACK TO TOP BUTTON HERE === -->
+    <!-- back to top button -->
     <a href="#" class="btt" aria-label="Back to top">
       <i class="fa-solid fa-arrow-up"></i>
     </a>
